# pmd-pytcp

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tests_runner.py
.claude/rules/: coding_style.md  enums.md  feature_implementation.md  integration_testing.md  net_addr.md  net_proto.md  protocol_architecture.md  pytcp.md  python_features.md  source_files.md  stack_runtime.md  tcp_keepalive_socket_api.md  tcp_rack_tlp.md  tcp_rfc5681_cwnd.md  tcp_rfc7323_timestamps.md  tcp_rfc9438_cubic.md  tcp_rto_integration.md  tcp_sack_implementation.md  tcp_session_integration_tests.md  tcp_session_split.md  tcp_test_coverage_audit.md  tcp_test_docstring_rfc_citations.md  typing.md  unit_testing.md  unit_tests.md
.claude/skills/rfc_adherence_audit/: SKILL.md
.claude/skills/sysctl_knob/: SKILL.md
.github/workflows/: ci.yml  publish.yml  python-publish.yml  tests.yml
docs/api/: README.md  address_api.md  introspection_api.md  link_api.md  neighbor_api.md  route_api.md  socket_api.md  sysctl_registry.md
docs/refactor/: address_api_unification.md  arp_linux_parity.md  audit_g_test_docstring_sweep.md  dhcp4_client_full_parity.md  dhcp6_client.md  icmp_demux_pmtud_plan.md  icmp_into_tcp_fsm_plan.md  icmp_remaining_issues.md  igmp_host_membership.md  igmp_r3_socket_refcounting.md  igmp_refinements.md  igmp_source_specific_multicast.md  igmp_version_fallback.md  ip4_audit_punchlist.md  ipv6_audit_parity.md  ipv6_extension_headers_plan.md  kernel_userspace_separation.md  legacy_harness_retirement.md  link_api.md  mld_version_fallback.md  nd_linux_parity.md  nd_session_resume.md  nd_tier3_resume.md  net_proto_remaining_audits.md  net_proto_rfc_adherence_pass.md  no_gil_thread_safety_audit.md  nud_state_machine.md  packet_handler_composition.md  packet_handler_rewrite_plan.md  plpmtud_closeout.md  plpmtud_unified_engine.md  post_udp_session_followups.md  pure_asyncio.md  pytcp_directory_restructure.md  raw_link_socket.md  rfc3927_link_local_autoconfig.md  rfc6724_source_selection.md  routing_table_host_mode.md  socket_dscp_marking.md  socket_linux_parity_audit.md  (+14 more)
docs/refactor/archive/: README.md  audit_g_test_docstring_sweep.md  udp_remaining_items.md  v3_0_6_release_readiness.md  v3_0_6_remaining_work.md
examples/: README.md  client__icmp_echo.py  client__tcp_echo.py  client__tcp_echo_ipc.py  client__udp_echo.py  service__mcast_listener.py  service__tcp_echo.py  service__udp_echo.py  stack.py
examples/lib/: client.py  malpi.py  payload.py  service.py  subsystem.py  tcp_service.py  udp_service.py
net_addr/: __init__.py  address.py  base.py  click_types.py  errors.py  ip.py  ip4_address.py  ip4_host.py  ip4_host_origin.py  ip4_ifaddr.py  ip4_ifaddr_source.py  ip4_mask.py  ip4_network.py  ip4_wildcard.py  ip6_address.py  ip6_host.py  ip6_host_origin.py  ip6_ifaddr.py  ip6_ifaddr_source.py  ip6_mask.py  ip6_network.py  ip6_wildcard.py  ip_address.py  ip_host.py  ip_host_origin.py  ip_ifaddr.py  ip_ifaddr_source.py  ip_mask.py  ip_network.py  ip_version.py  ip_wildcard.py  mac_address.py
net_addr/tests/unit/: test__abstract_stubs.py  test__click_types.py  test__ip4_address.py  test__ip4_host.py  test__ip4_ifaddr.py  test__ip4_mask.py  test__ip4_network.py  test__ip4_wildcard.py  test__ip6_address.py  test__ip6_host.py  test__ip6_ifaddr.py  test__ip6_mask.py  test__ip6_network.py  test__ip6_wildcard.py  test__lazy_click.py  test__mac_address.py
net_proto/: __init__.py
net_proto/lib/: __init__.py  buffer.py  enums.py  errors.py  inet_cksum.py  int_checks.py  packet_rx.py  proto.py  proto_assembler.py  proto_enum.py  proto_option.py  proto_parser.py  proto_struct.py  tracker.py
net_proto/protocols/arp/: arp__assembler.py  arp__base.py  arp__enums.py  arp__errors.py  arp__header.py  arp__parser.py
net_proto/protocols/dhcp4/: dhcp4__assembler.py  dhcp4__base.py  dhcp4__enums.py  dhcp4__errors.py  dhcp4__header.py  dhcp4__parser.py
net_proto/protocols/ethernet/: ethernet__assembler.py  ethernet__base.py  ethernet__errors.py  ethernet__header.py  ethernet__parser.py
net_proto/protocols/ethernet_802_3/: ethernet_802_3__assembler.py  ethernet_802_3__base.py  ethernet_802_3__errors.py  ethernet_802_3__header.py  ethernet_802_3__parser.py
net_proto/protocols/icmp4/: icmp4__assembler.py  icmp4__base.py  icmp4__errors.py  icmp4__parser.py
net_proto/protocols/icmp6/: icmp6__assembler.py  icmp6__base.py  icmp6__errors.py  icmp6__parser.py
net_proto/protocols/ip4/: ip4__assembler.py  ip4__base.py  ip4__defaults.py  ip4__errors.py  ip4__header.py  ip4__parser.py
net_proto/protocols/ip6/: ip6__assembler.py  ip6__base.py  ip6__errors.py  ip6__header.py  ip6__parser.py
net_proto/protocols/ip6_dest_opts/: ip6_dest_opts__assembler.py  ip6_dest_opts__base.py  (+3 more)
pytcp/: __init__.py  template.py
pytcp/lib/: address_api.py  dad_slot_registry.py  dhcp4_client.py  dhcp_uid.py  interface_layer.py  ip4_source_selection.py  ip6_ext_hdr_limits.py  ip6_flow_label.py  ip6_policy_table.py  ip6_source_selection.py  ip_frag.py  ip_frag_table.py  ip_helper.py  ip_scope.py  link_api.py  logger.py  name_enum.py  neighbor.py  neighbor__constants.py  packet_stats.py  plpmtud.py  subsystem.py  sysctl.py  tcp_iss.py  tcp_loss_recovery.py  tcp_sack.py  tcp_seq.py  tx_status.py
pytcp/runtime/: rx_ring.py  subsystem.py  timer.py  tx_ring.py
pytcp/socket/: __init__.py  error_queue.py  raw__metadata.py  raw__socket.py  socket__bind_helpers.py  socket_id.py  tcp__metadata.py  tcp__session.py  tcp__socket.py  tcp__status.py  udp__metadata.py  udp__socket.py
pytcp/stack/: __init__.py  address.py  arp_cache.py  lifecycle.py  link.py  nd_cache.py  route.py  rx_ring.py  sysctl.py  timer.py  tx_ring.py
tests__legacy/integration/: packet_flows_rx.py  packet_flows_rx_tx.py
tests__legacy/unit/: mock_network.py  protocols__ethernet__phtx.py  protocols__icmp4__phtx.py  protocols__icmp6__phtx.py  protocols__tcp__phtx.py  protocols__udp__phtx.py
tools/: bench_rx_ring.py  capture.sh  udp_flood.py
tools/capture/: __init__.py  __main__.py  lib.py
(+1159 files in other folders)
