[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyTCP"
version = "3.0.5"
description = "Pure-Python, zero-dependency TCP/IP stack — Ethernet through RFC 9293 TCP — running in user space on a TAP/TUN interface, with a Berkeley-sockets API."
readme = "README.md"
authors = [{ name = "Sebastian Majewski", email = "ccie18643@gmail.com" }]
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Environment :: Console",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
keywords = [
    "pytcp",
    "stack",
    "networking",
    "tcp",
    "ip",
    "ipv4",
    "ipv6",
    "arp",
    "ethernet",
    "icmp",
]
dependencies = []
requires-python = ">=3.14"

[project.urls]
"Homepage" = "https://github.com/ccie18643/PyTCP"
"Bug Tracker" = "https://github.com/ccie18643/PyTCP/issues"

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.isort]
profile = "black"
src_paths = ["pytcp", "examples", "packages/net_addr", "packages/net_proto"]
line_length = 120
honor_noqa = true

[tool.codespell]
quiet-level = 2
ignore-words-list = "ect, ether, nd, tha, assertIn, sourc"

[tool.flake8]
max-line-length = 120
ignore = ["E203", "E266", "E701", "E704", "W503", "E731", "E741"]
per-file-ignores = [
    "pytcp/stack/__init__.py:F821",
]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_any_unimported = true
show_error_codes = true

[tool.pylint.master]
max-line-length = 120
disable = """
    super-init-not-called,
    no-name-in-module,
    import-error,
    dangerous-default-value,
    too-many-instance-attributes,
    too-many-public-methods,
    too-many-arguments,
    too-many-locals,
    too-many-branches,
    too-many-lines,
    too-many-boolean-expressions,
    too-many-positional-arguments,
    too-many-statements,
    too-many-return-statements,
    too-few-public-methods,
    import-outside-toplevel,
    fixme,
    multiple-statements,
    invalid-name,
    redefined-builtin,
    superfluous-parens,
    expression-not-assigned,
    no-member,
    too-many-ancestors,
    redefined-outer-name,
    global-statement,
    wrong-import-order,
    consider-using-with,
    abstract-class-instantiated
"""

[tool.setuptools.packages.find]
# net_addr and net_proto are now their own dists
# (packages/net_addr/, packages/net_proto/), so neither is
# discovered here. The umbrella PyTCP build is intentionally left
# as-is: this exact non-glob "pytcp" pattern ships almost no code
# (pre-existing, broken on PyPI 3.0.4 — the fix is the trailing
# '*', empirically isolated during the net_proto split). That
# remediation, and whether the umbrella should depend on
# PyTCP-net_addr / PyTCP-net_proto, is tracked separately in
# docs/refactor/umbrella_wheel_packaging.md and is deliberately
# NOT entangled with the net_addr / net_proto releases.
include = ["pytcp"]

