# PyTCP monorepo — workspace root.
#
# This file is intentionally NOT a buildable project: it has no
# [build-system] and no [project]. The three distributions each
# live in their own PEP 517 project and are built from there:
#
#   packages/net_addr   -> PyTCP-net_addr   (import: net_addr)
#   packages/net_proto  -> PyTCP-net_proto  (import: net_proto)
#   packages/pytcp      -> PyTCP            (import: pytcp)
#
# This root only carries the shared lint/type tooling config that
# the Makefile applies across the whole tree (run from the repo
# root with explicit file lists, so these [tool.*] sections are
# the single source of truth — no per-package tool config, no
# drift). Dev resolution is via editable-compat installs of all
# three packages (`make venv`).

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313", "py314"]

[tool.isort]
profile = "black"
src_paths = ["packages/pytcp", "examples", "packages/net_addr", "packages/net_proto"]
line_length = 120
honor_noqa = true

[tool.codespell]
quiet-level = 2
ignore-words-list = "ect, ether, nd, tha, assertIn, sourc"

[tool.flake8]
max-line-length = 120
ignore = ["E203", "E266", "E701", "E704", "W503", "E731", "E741"]
per-file-ignores = [
    "packages/pytcp/pytcp/stack/__init__.py:F821",
]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_any_unimported = true
show_error_codes = true
enable_error_code = ["explicit-override"]

# Test modules are exempt from 'explicit-override': the
# @override-on-setUp/tearDown expectation (unit_testing.md
# §10b.1) stays a written convention rather than a mechanical
# gate, so the test corpus is not forced to decorate every
# fixture hook. Source code is enforced.
[[tool.mypy.overrides]]
module = ["*.tests.*"]
disable_error_code = ["explicit-override"]

[tool.pylint.master]
max-line-length = 120
disable = """
    super-init-not-called,
    no-name-in-module,
    import-error,
    dangerous-default-value,
    too-many-instance-attributes,
    too-many-public-methods,
    too-many-arguments,
    too-many-locals,
    too-many-branches,
    too-many-lines,
    too-many-boolean-expressions,
    too-many-positional-arguments,
    too-many-statements,
    too-many-return-statements,
    too-few-public-methods,
    import-outside-toplevel,
    fixme,
    multiple-statements,
    invalid-name,
    redefined-builtin,
    superfluous-parens,
    expression-not-assigned,
    no-member,
    too-many-ancestors,
    redefined-outer-name,
    global-statement,
    wrong-import-order,
    consider-using-with,
    abstract-class-instantiated
"""
